--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{ "http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
-    %title Fat Free CRM
+    %title Strategy to Succeed CRM
     == <!-- #{controller.controller_name} : #{controller.action_name} -->
     = stylesheet_link_tag "screen", "modalbox.css", :cache => "cache/all"
     = stylesheet_link_tag "print", :media => "print"
