--- a/app/views/notifier/password_reset_instructions.html.haml
+++ b/app/views/notifier/password_reset_instructions.html.haml
@@ -1,4 +1,4 @@
-:plain
+:preserve
   A request to reset your password has been made. If you did not make this request, simply ignore this email. If you did make this request just click the link below:
 
   #{@edit_password_url}
