--- a/app/views/accounts/_top_section.html.haml
+++ b/app/views/accounts/_top_section.html.haml
@@ -8,26 +8,36 @@
       %tr
         %td{ :colspan => 5 }
           %table{ :width => "100%", :cellpadding => 0, :cellspacing => 0 }
-      
-            %td
-              .label #{t :assigned_to}:
-              = collection_select :account, :assigned_to, @users, :id, :full_name, { :include_blank => t(:myself) }, { :style => "width:245px" }
-            %td= spacer
-            %td
-              .label #{t :rating}:
-              = rating_select "account[rating]", { :id => :account_rating, :selected => @account.rating, :style => "width:245px" }
+            %tr
+              %td
+                .label #{t :assigned_to}:
+                = collection_select :account, :assigned_to, @users, :id, :full_name, { :include_blank => t(:myself) }, { :style => "width:160px" }
+              %td= spacer
+              %td
+                .label #{t :rating}:
+                = rating_select "account[rating]", { :id => :account_rating, :selected => @account.rating, :style => "width:160px" }
+              %td= spacer
+              %td
+                .label.top Employees:
+                = f.text_field :employee_count, :style => "width:60px; text-align:center;"
+              %td
+                .label.top{ :style => 'text-align:right;' } Turnover £:
+                = f.text_field :turnover_gbp, :value => number_with_precision(f.object.turnover_gbp, :precision => 2, :delimiter => ','), :style => "width:90px; text-align:right;"
+              
+                    
+              
           
       %tr
         %td{ :colspan => 5 }
           %table{ :width => "100%", :cellpadding => 0, :cellspacing => 0 }
-      
-            %td
-              .label.top Category:
-              = f.select :category, Setting.unroll(:account_category), { :selected => (@account.category || "other").to_sym, :include_blank => t(:other) }, { :style => "width:245px" }
-            %td= spacer
-            %td
-              .label.top Market Segment:
-              = f.select :market_segment, Setting.unroll(:account_market_segment), { :selected => (@account.category || "other").to_sym, :include_blank => t(:other) }, { :style => "width:245px" }
+            %tr
+              %td
+                .label.top Category:
+                = f.select :category, Setting.unroll(:account_category), { :selected => (@account.category || "other").to_sym, :include_blank => t(:other) }, { :style => "width:245px" }
+              %td= spacer
+              %td
+                .label.top Market Segment:
+                = f.select :market_segment, Setting.unroll(:account_market_segment), { :selected => (@account.category || "other").to_sym, :include_blank => t(:other) }, { :style => "width:245px" }
           
 
       - if Setting.background_info && Setting.background_info.include?(:account)
